name:                push-test
version:             0.1
license:             MPL-2.0
license-file:        LICENSE
author:              Ben Bangert
maintainer:          ben@groovie.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall

  Exposed-modules:
    PushClient

  build-depends:
            base            >= 4.6  && <4.7
          , websockets      >= 0.8.2.1
          , text            >= 0.11.3.1
          , mtl             >= 2.1.2
          , aeson           >= 0.7.0.3
          , containers      >= 0.5.0.0
          , bytestring      >= 0.10.0.2
          , lens            >= 4.1.2
          , wreq            >= 0.1.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010

  -- Force build with -O0 for assertions to run
  ghc-options: -O0 -Wall -threaded

Test-suite pushclient-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall -threaded
  default-language:    Haskell2010

  Build-depends:
    HUnit                      >= 1.2 && < 1.3,
    QuickCheck                 >= 2.4 && < 2.8,
    test-framework             >= 0.4 && < 0.9,
    test-framework-hunit       >= 0.2 && < 0.4,
    test-framework-quickcheck2 >= 0.2 && < 0.4,
    -- Copied from regular dependencies...
            base            >= 4.6  && <4.7
          , websockets      >= 0.8.2.1
          , text            >= 0.11.3.1
          , mtl             >= 2.1.2
          , aeson           >= 0.7.0.3
          , containers      >= 0.5.0.0
          , bytestring      >= 0.10.0.2
          , lens            >= 4.1.2
          , wreq            >= 0.1.0.1
