name:                push-test
version:             0.1
license:             MPL-2.0
license-file:        LICENSE
author:              Ben Bangert
maintainer:          ben@groovie.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall

  Exposed-modules:
    PushClient

  build-depends:
            base            >= 4.6  && <4.9
          , websockets      >= 0.8.2.1
          , text            >= 0.11.3.1
          , mtl             >= 2.1.2
          , aeson           >= 0.7.0.3
          , containers      >= 0.5.0.0
          , bytestring      >= 0.10.0.2
          , lens            >= 4.1.2
          , wreq            >= 0.1.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010

  -- Force build with -O0 for assertions to run
  ghc-options: -O0 -Wall -threaded

Executable spTester
  Default-Language:     Haskell2010
  Hs-source-dirs:       spTester
  Main-is:              Main.hs
  GHC-Options:          -O2 -Wall -threaded
  Other-Modules:
    SimpleTest
    SimpleTest.Types
    SimpleTest.Interact
    SimpleTest.Util
  Build-depends:
      base          >= 4.6      && < 5
    , async         >= 2.0.1.4
    , bytestring  >= 0.10.4.0
    , containers    >= 0.5
    , websockets    >= 0.8.2.4
    , io-streams
    , push-test
    , mtl           >= 2.1.3.1
    , text          >= 1.1.1.3
    , crypto-api    >= 0.12.2.2
    , wreq          >= 0.1
    , QuickCheck    >= 2.7.6
    , network-metrics >= 0.3.3
    , hostname      >= 1.0
    , split         >= 0.2.2
    , network       >= 2.5
    , time          >= 1.4

Test-suite pushclient-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall -threaded
  default-language:    Haskell2010

  Build-depends:
    HUnit                      >= 1.2 && < 1.3,
    QuickCheck                 >= 2.4 && < 2.8,
    tasty                      >= 0.1,
    tasty-quickcheck           >= 0.1,
    -- Copied from regular dependencies...
            base            >= 4.6  && <4.9
          , websockets      >= 0.8.2.1
          , text            >= 0.11.3.1
          , mtl             >= 2.1.2
          , aeson           >= 0.7.0.3
          , containers      >= 0.5.0.0
          , bytestring      >= 0.10.0.2
          , lens            >= 4.1.2
          , wreq            >= 0.1.0.1
